--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <h2 class="lead">Entrega Ejercicio Web Institucional - Belluccia III</h2>
                 <h1>Dana Riquelme</h1>
                 <p style="margin-top:50px">
-                    <a class="btn btn-primary btn-lg" href="https://danariq.github.io/guauclub/sitio_desarrollado/">Sitio desarrollado</a> 
+                    <a class="btn btn-primary btn-lg" href="https://danariq.github.io/guauclub/sitio_desarrollado/index.html">Sitio desarrollado</a> 
                     <a class="btn btn-default btn-lg" href="https://technext.github.io/petsitting/index.html">Template utilizado</a>
                 </p>
             </div>
