--- a/sitio_desarrollado/index.html
+++ b/sitio_desarrollado/index.html
@@ -33,12 +33,12 @@
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
 	        	<li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-	        	<li class="nav-item"><a href="about.html" class="nav-link">Guau Club</a></li>
+	        	<li class="nav-item"><a href="#" class="nav-link">Guau Club</a></li>
 	        	<!-- <li class="nav-item"><a href="vet.html" class="nav-link">Veterinarian</a></li> -->
-	        	<li class="nav-item"><a href="services.html" class="nav-link">FAQS</a></li>
+	        	<li class="nav-item"><a href="#" class="nav-link">FAQS</a></li>
 	          <!-- <li class="nav-item"><a href=# class="nav-link">Gallery</a></li> -->
 	          <!--li class="nav-item"><a href="pricing.html" class="nav-link"></a></li-->
-	          <li class="nav-item"><a href=# class="nav-link">Suscripciones</a></li>
+	          <li class="nav-item"><a href=services.html class="nav-link">Suscripciones</a></li>
 	          <li class="nav-item"><a href=# class="nav-link">Contacto</a></li>
 	        </ul>
 	      </div>
