--- a/sitio_desarrollado/index.html
+++ b/sitio_desarrollado/index.html
@@ -309,7 +309,7 @@
     	</div>
     </section>
 
-    <section class="ftco-section testimony-section" style="background-image: url('images/texture.jpg');">
+    <section class="ftco-section testimony-section" style="background-image: url('images/textura.jpg');">
     	<div class="overlay"></div>
       <div class="container">
         <div class="row justify-content-center pb-5 mb-3">
