--- a/sitio_desarrollado/index.html
+++ b/sitio_desarrollado/index.html
@@ -439,7 +439,7 @@
       </div>
     </section>
 		
-		<section class="ftco-section" style="background-image: url('images/fondo2.png') background-size: cover;">
+		<section class="ftco-section" style="background-image: url('images/fondo2.png'); background-size: cover;">
 			<div class="container">
 				<div class="row justify-content-center pb-5 mb-3">
           <div class="col-md-7 heading-section text-center ftco-animate">
