--- a/sitio_desarrollado/index.html
+++ b/sitio_desarrollado/index.html
@@ -584,7 +584,9 @@ Los cachorros necesitan mucho descanso, una alimentación correcta, amor y un ej
       </div>
     </section>
 
-    <section class="ftco-appointment ftco-section ftco-no-pt ftco-no-pb img" style="background-image: url(images/bg_3.jpg);">
+    <section class="ftco-appointment ftco-section ftco-no-pt ftco-no-pb img" style="background-image: url ;">
+		<div class="img img-video d-flex align-self-stretch align-items-center justify-content-center justify-content-md-center mb-4 mb-sm-0" style="background-image:url(images/p_2.jpg);">
+
 			<div class="overlay"></div>
     	<div class="container">
     		<div class="row d-md-flex justify-content-end">
