--- a/sitio_desarrollado/index.html
+++ b/sitio_desarrollado/index.html
@@ -584,49 +584,49 @@ Los cachorros necesitan mucho descanso, una alimentación correcta, amor y un ej
       </div>
     </section>
 
-    <section class="ftco-appointment ftco-section ftco-no-pt ftco-no-pb img" style="background-image: url ;">
-		<div class="img img-video d-flex align-self-stretch align-items-center justify-content-center justify-content-md-center mb-4 mb-sm-0" style="background-image:url(images/p_2.jpg);">
-
-			<div class="overlay"></div>
-    	<div class="container">
-    		<div class="row d-md-flex justify-content-end">
-    			<div class="col-md-12 col-lg-6 half p-3 py-5 pl-lg-5 ftco-animate">
-    				<h2 class="mb-4">Contacto</h2>
-    				<form action="#" class="appointment">
-    					<div class="row">
-    						
+    <section class="ftco-appointment ftco-section ftco-no-pt ftco-no-pb img">
+		<div class="row d-flex">
+			<div class="container col-lg-6">
+				<img id="imagenContacto" src="./images/p_2.jpg" style="max-width:100%;max-height:100%;">
+			</div>
+			<div id="formContacto" class="container col-lg-6" style="background: linear-gradient(45deg, #fe8333 0%, #ffb400 100%);">
+				<div class="col-md-12 col-lg-6 half p-3 py-5 pl-lg-5 ftco-animate">
+					<h2 class="mb-4">Contacto</h2>
+					<form action="#" class="appointment">
+						<div class="row">
+							
 								<div class="col-md-6">
 									<div class="form-group">
-			              <input type="text" class="form-control" placeholder="Nombre">
-			            </div>
+							<input type="text" class="form-control" placeholder="Nombre">
+						</div>
 								</div>
 								<div class="col-md-6">
 									<div class="form-group">
-			              <input type="text" class="form-control" placeholder="Apellido">
-			            </div>
+							<input type="text" class="form-control" placeholder="Apellido">
+						</div>
 								</div>
 								<div class="col-md-12">
 									<div class="form-group">
-			    						<div class="input-wrap">
+										<div class="input-wrap">
 												<input type="text" class="form-control" placeholder="Email">
 											</div>
 										</div>
 									</div>
 										<div class="col-md-12">
 											<div class="form-group">
-			              <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Mensaje"></textarea>
-			            </div>
+							<textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Mensaje"></textarea>
+						</div>
 								</div>
 								<div class="col-md-12">
 									<div class="form-group">
-			              <input type="submit" value="Enviar mensaje" class="btn btn-primary py-3 px-4">
-			            </div>
+							<input type="submit" value="Enviar mensaje" class="btn btn-primary py-3 px-4">
+						</div>
 								</div>
-    					</div>
-	          </form>
-    			</div>
-    		</div>
-    	</div>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
     </section>
 
     <footer class="footer">
